issue #457 - paint mode icon too big

--- a/chrome/content/skin/quickfolders-widgets.css
+++ b/chrome/content/skin/quickfolders-widgets.css
@@ -117,6 +117,11 @@ menuitem.cmd[tagName="qfPaintBucket"] .menu-iconic-icon,
 #QuickFolders-Toolbar toolbarbutton#QuickFolders-paintBucketActive {
 	list-style-image: url("chrome://mozapps/skin/extensions/category-themes.svg");
 }
+
+#QuickFolders-paintBucketActive image {
+	width: 18px;
+}
+
 #QuickFolders-Toolbar toolbarbutton#QuickFolders-paintBucketActive {
   -moz-appearance: none !important; /* make sure we can fill in a background color */
 	min-height: 22px;
